<resources>
    <string name="app_name">Exames Praticos</string>
    <string name="title_activity_login">Entrar no Sistema</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Informe sua senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login2">Sign in</string>
    <string name="txtLogin_text">Informe seu Login</string>
    <string name="txtSenha_text">Informe sua Senha</string>
    <string name="btnLogin_text">Entrar</string>

    <!-- Strings relacionadas ao Home -->
    <string name="botaoSincronizar">Sincronizar Agendas</string>
    <string name="botaoAplicarProva">Aplicar Prova</string>
    <string name="botaoFecharProva">Fechar Agendas</string>
    <string name="title_activity_home">Exames Práticos</string>
    <string name="navigation_drawer_open">Abrir navegação</string>
    <string name="navigation_drawer_close">Fechar Navegação</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_limpar_tabelas">Limpar Tabelas</string>
    <string name="btnImportar_text">Importar Agendas</string>
    <string name="title_activity_importar">Importar Agenda de Exames</string>
    <string name="botaoImportar">Importar Agendas</string>
    <string name="textHintDataExame">Informe a Data do Exame</string>
    <string name="textHintDataExameInicial">Informe a Data Inicial</string>
    <string name="textHintDataExameFinal">Informe a Data Final</string>
    <string name="textHintCpfExaminador1">Informe o CPF do Examinador 1</string>
    <string name="textHintCpfExaminador2">Informe o CPF do Examinador 2</string>
    <string name="radioText2Rodas">EPDV 2 RODAS/ACC</string>
    <string name="radioText4Rodas">EPDV 4 RODAS</string>
    <string name="hintAutoCompletoLocalDeExame">Informe a descrição do Local de Exame</string>
    <string name="botaoAtualizarDados">Atualizar Dados</string>
    <string name="title_activity_aplicar_prova">Aplicar Prova</string>
    <string name="title_activity_selecionar_candidato">Selecionar Candidato</string>
    <string name="title_activity_fingerscan">Capturar Digital</string>
    <string name="botaoBuscar">Buscar</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="textoTabLeve">Leve</string>
    <string name="textoTabMedia">Média</string>
    <string name="textoTabGrave">Grave</string>
    <string name="textoTabEliminatoria">Eliminatória</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contextDescriptionBtnAdicionarFalta">Adicionar Falta</string>
    <string name="contentDescriptionRemoveFalta">Remover Falta</string>
    <string name="textoHintTurmaOpcional">Turma [Opcional]</string>
    <string name="clique_em_um_dos_candidatos_na_lista_abaixo">Clique em um dos Candidatos na lista abaixo</string>
    <string name="Tipo_de_Exame">Tipo de Exame:</string>
    <string name="candidato">Candidato:</string>
    <string name="cpf">CPF:</string>
    <string name="textoBotaoAlunoAusente">Aluno Ausente</string>
    <string name="textoBotaoFecharProva">Fechar Prova</string>
    <string name="header_confirm_dialog_aluno_ausente">Rersultado: Ausente</string>
    <string name="botaoConfimarDialog">Confirmar</string>
    <string name="botaoCancelarDialog">Cancelar</string>
    <string name="voc_deseja_confirmar_aluno_como_ausente">Você deseja confirmar aluno como ausente?</string>
    <string name="textoBotaoOk">Ok</string>
    <string name="textoHintPlacaVeiculo">Informe a placa do veículo</string>
    <string name="textoLabelObservacao">Observação:</string>
    <string name="textoBotaoConfirmarEnviar">Confirmar e Enviar</string>
    <string name="title_activity_fechar_agenda">FecharAgendaActivity</string>
    <string name="botaoFecharTodos">Fechar Todas as Agendas</string>
    <string name="title_activity_scan2">ScanActivity2</string>
    <string name="title_activity_ftr_scan_usb_host">Coletar Digital</string>
    <string name="title_activity_registrar_presenca_candidato">RegistrarPresencaCandidatoActivity
    </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_aplicar_exame">AplicarExameActivity</string>
    <string name="tab_text_1">Leve</string>
    <string name="tab_text_2">Média</string>
    <string name="tab_text_3">Grave</string>
    <string name="tab_text_4">Eliminatória</string>

</resources>
