<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtMensagemConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtPlacaVeiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/textoHintPlacaVeiculo"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:labelFor="@+id/txtObservacao"
        android:text="@string/textoLabelObservacao"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtObservacao"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textMultiLine" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/colorHoloRedLight"
            android:text="@string/botaoCancelarDialog"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/botaoConfimarDialog"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/textoBotaoConfirmarEnviar" />
    </LinearLayout>
</LinearLayout>
