<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="5dp">

    <TextView
        android:id="@+id/txtMensagemConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:labelFor="@+id/txtObservacao"
        android:text="Dados do Exame"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/renachCandidato"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Documento de identificação do candidato"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="125dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/baseline_fingerprint_24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="2dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtPlacaVeiculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/textoHintPlacaVeiculo"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtValidadeLadv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="Informe a validade da LADV"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@android:color/holo_green_light"
            android:text="@string/botaoConfimarDialog"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:background="@color/colorHoloRedLight"
            android:text="@string/botaoCancelarDialog"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>